@@ -46,6 +46,7 @@ int main(int argc, char *argv[])
 	int result;
 	int sock;
 	pthread_t tid;
+	struct sigaction act;
 	
 	if (argc < 2)
 	{
@@ -87,14 +88,48 @@ int main(int argc, char *argv[])
 		return result;
 	}
 
-	signal(SIGHUP, sigHupHandler);
-	signal(SIGUSR1, sigUsrHandler);
-	signal(SIGUSR2, sigUsrHandler);
-	signal(SIGINT, sigQuitHandler);
-	signal(SIGTERM, sigQuitHandler);
-	signal(SIGQUIT, sigQuitHandler);
-	signal(SIGPIPE, SIG_IGN);
+	memset(&act, 0, sizeof(act));
+	sigemptyset(&act.sa_mask);
+
+	act.sa_handler = sigUsrHandler;
+	if(sigaction(SIGUSR1, &act, NULL) < 0 || \
+		sigaction(SIGUSR2, &act, NULL) < 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call sigaction fail, errno: %d, error info: %s", \
+			__LINE__, errno, strerror(errno));
+		return errno;
+	}
+
+	act.sa_handler = sigHupHandler;
+	if(sigaction(SIGHUP, &act, NULL) < 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call sigaction fail, errno: %d, error info: %s", \
+			__LINE__, errno, strerror(errno));
+		return errno;
+	}
 	
+	act.sa_handler = SIG_IGN;
+	if(sigaction(SIGPIPE, &act, NULL) < 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call sigaction fail, errno: %d, error info: %s", \
+			__LINE__, errno, strerror(errno));
+		return errno;
+	}
+
+	act.sa_handler = sigQuitHandler;
+	if(sigaction(SIGINT, &act, NULL) < 0 || \
+		sigaction(SIGTERM, &act, NULL) < 0 || \
+		sigaction(SIGQUIT, &act, NULL) < 0)
+	{
+		logError("file: "__FILE__", line: %d, " \
+			"call sigaction fail, errno: %d, error info: %s", \
+			__LINE__, errno, strerror(errno));
+		return errno;
+	}
+
 	while (g_continue_flag)
 	{
 		/*
